# HybridArena

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.ai/: checkpoint.json  ledger.json
.ai/inbox/: hybrid_arena_parallel_skill_runtime_plan.md  plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.yml  phase.yml
.github/workflows/: ci.yml
configs/experiments/: baseline_smoke.yaml  baseline_v1.yaml  baseline_v1_smoke.yaml  checkpoint_evidence_smoke.yaml  sanity_2v2.yaml  sanity_2v2_objective_shaping.yaml
cpp_inference/: CMakeLists.txt  README.md
cpp_inference/include/: observation_codec.hpp  ring_buffer.hpp
cpp_inference/src/: main.cpp  observation_codec.cpp
cpp_inference/tests/: test_observation_codec.cpp
datasets/jd_samples/: jd_cases.jsonl  resume_profile.json
datasets/telecom_docs/: mini_telecom_kb.jsonl  rag_eval_cases.jsonl
datasets/ticket_samples/: ticket_cases.jsonl
docs/: agentbench-architecture.md  agentbench-benchmark-report.md  agentbench-demo-script.md  agentbench-resume-bullets.md  architecture.md  checkpoint-evidence-chain.md  claim-boundaries.md  cpp-onnxruntime-validation.md  dev-setup.md  experiment-report-v0.md  hybridarena-next-step-plan.md  integration-test-wen-165.md  issues.md  plan.md  portfolio-demo-guide.md  progress.md  project-system.md  qa-rating-loop.md  report.md  review-report-HybridArena-ISSUE-F11.md  rlmoba-five-phase-roadmap.md  scope-freeze-m0.md  verification-wen-43.md  verification-wen-44.md  verification-wen-86.md
docs/.archive/: plan-agentbench-v3.md  plan-v1.md
docs/inbox/: plan.md
docs/refs/: HybridArena_4060适配方案.md  HybridArena_完整项目实施方案.md  hybridarena-phase-f-codex-dispatch.md  project-audit.md  ref-llm-planner-grpo.md  ref-pettingzoo-action-mask.md  ref-ppo-training-correctness.md  research-report.md
hybrid_arena/: __init__.py
hybrid_arena/agents/: __init__.py
hybrid_arena/algorithms/: __init__.py  networks.py
hybrid_arena/configs/: __init__.py  default.yaml
hybrid_arena/core/: __init__.py  reporting.py  schema.py  storage.py  traces.py
hybrid_arena/demo/: __init__.py  app.py  moba_app.py
hybrid_arena/deployment/: __init__.py  export_onnx.py  latency_benchmark.py  onnx_validate.py  status.py
hybrid_arena/distributed/: __init__.py  actor_worker.py  learner_worker.py  messages.py  policy_sync.py  replay_queue.py  vtrace.py
hybrid_arena/inference/: __init__.py  adapter.py  llm_planner.py  macro_actions.py  persona.py  planner_memory.py  planner_state.py  planner_trace.py  prompt_templates.py  rule_planner.py  state_translator.py  strategy_bridge.py  trace_recorder.py
hybrid_arena/minimoba/: __init__.py  action_encoding.py  ctde_state.py  env.py  game_engine.py  hero.py  (+6 more)
ref/: MOBA-RL-主线技术导览.md  agent-architecture-next-roadmap.md  agentbench-agent-architecture-l2-lite-summary.md  agentbench-skill-runtime-branch-summary.md  fix-summary-20260510.md  next-roadmap-CDE-20260519.md  ref-hybridarena-five-phase-microresearch-20260519.md  ref-next-roadmap-CDE-20260519.md  review-report-20260513.md  rlmoba-tactical-architecture-l2-lite-summary.md  rlmoba-tactical-runtime-branch-summary.md  招聘项目方案调研.md
results/: ablation_raw.csv  ablation_summary.md  eval_smoke.json
(+208 files in other folders)
