[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid_arena"
version = "0.1.0"
description = "LLM x DRL hybrid agent platform for partially observable strategy games"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HybridArena Team" }]
keywords = ["reinforcement-learning", "multi-agent", "game-ai", "ppo", "moba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=1.0",
    "pettingzoo>=1.24",
    "supersuit>=3.9",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]
rl = [
    "torch>=2.2",
]
llm = [
    "transformers>=4.40",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "peft>=0.10",
    "trl>=0.8",
]
demo = [
    "streamlit>=1.35",
]
all = [
    "hybrid_arena[dev,rl,llm,demo]",
]

[project.scripts]
hybrid-benchmark = "hybrid_arena.scripts.benchmark_fps:main"
hybrid-play = "hybrid_arena.scripts.play_human:main"

[tool.setuptools.packages.find]
include = ["hybrid_arena*"]

[tool.pytest.ini_options]
testpaths = ["hybrid_arena/minimoba/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "gpu: marks tests requiring a GPU (deselect with -m 'not gpu')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B019", "SIM102", "SIM103", "B007", "N812"]

[tool.ruff.lint.per-file-ignores]
"hybrid_arena/scripts/play_human.py" = ["F821", "F823"]  # pygame conditional import
"hybrid_arena/minimoba/tests/*" = ["SIM102", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
